# cs2servergui

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  conanfile.py  conanfile.txt
conan/: custom_profile
resources/: resources.rc
scripts/: convert_csv_to_sqlite.py  deploy_and_package_win.ps1  deploy_win.ps1  package_win.ps1
src/: CMakeLists.txt  main.cpp
src/application/: AppData.cpp  AppData.h  CMakeLists.txt  CommandHistory.cpp  CommandHistory.h  Database.cpp  Database.h  FileDialogHelper.cpp  FileDialogHelper.h  Log.cpp  Log.h  MapHistory.cpp  MapHistory.h  MapHistoryDatabase.cpp  MapHistoryDatabase.h  MapHistoryModel.cpp  MapHistoryModel.h  ProcessHandler.cpp  ProcessHandler.h  ProcessImpl.h  ProcessImpl_Linux.cpp  ProcessImpl_Windows.cpp  RCONClient.cpp  RCONClient.h  Settings.cpp  Settings.h  Utilities.h  Utilities_Linux.cpp  Utilities_Windows.cpp  import_qml_plugins.h  pch.h
src/qml/: App.qml  CMakeLists.txt  ConsolePage.qml  InputField.qml  MainMenu.qml  PowerPanel.qml  ServerParametersPage.qml  TerminalOutput.qml
src/ui/: App.qml  AppMenuBar.qml  CMakeLists.txt  ConsolePage.qml  Constants.qml  Globals.qml  InputField.qml  LogWindow.qml  Main.qml  MainMenu.qml  MapHistoryModel.qml  MapHistoryPage.qml  MapHistoryWindow.qml  PowerPanel.qml  QuickCommand.qml  ServerParametersPage.qml  Spoiler.qml  TerminalOutput.qml  Theme.qml  qtquickcontrols2.conf
tests/: CMakeLists.txt  DatabaseTest.cpp  MapHistoryDatabaseTest.cpp  main.cpp
